<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.LoginActivity">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="491dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="25dp"
            android:paddingEnd="20dp"
            android:paddingBottom="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:padding="@dimen/activity_vertical_margin"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_wel"
                    android:textSize="36sp"/>
                <TextView
                    android:padding="@dimen/activity_vertical_margin"
                    android:layout_marginBottom="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_mes"
                    android:textSize="13sp"/>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_edittext"
                android:paddingLeft="5dp"
                android:paddingEnd="5dp">

                <EditText
                    android:id="@+id/edUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:hint="User Name"
                    android:imeOptions="actionNext"
                    android:text="cong12345"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_edittext"
                android:paddingLeft="5dp"
                android:paddingEnd="5dp">

                <EditText
                    android:id="@+id/edPassWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:hint="Pass Word"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="cong12345"
                    android:textSize="15dp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkRememberPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/tv_save_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="100dp"
                    android:text="@string/tv_fogot_password" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="276dp"
                android:gravity="end"
                android:orientation="vertical"

                >

                <Button
                    android:id="@+id/login_dangnhap"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="3dp"
                    android:background="@color/red"
                    android:paddingBottom="5dp"
                    android:paddingEnd="15dp"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/tv_login"
                    android:textAllCaps="false" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="40dp"
                    android:text="@string/tv_notify_acc" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>