<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/tv_add_style_book"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_style_book_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mã Thể Loại"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_style_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tên Thể Loại"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Vị trí"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_painted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Mô tả"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_style_book"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/tv_add"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/tv_cancel"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>